--- a/balazs.html
+++ b/balazs.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="balazs.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="balazs.css">
@@ -13,14 +14,16 @@
 </head>
 <body class="bg-dark">
     <div class="container-fluid">
-        <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">A csapat</a>
-          <ul class="navbar-nav">
-              <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li>
-              <li class="nav-item active"><a href="#" class="nav-link">Zick Balázs <span>(jelenlegi)</span></a></li>
-              <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
-              <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
-          </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tar"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="tar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li>
+                <li class="nav-item active"><a href="#" class="nav-link">Zick Balázs <span>(jelenlegi)</span></a></li>
+                <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
+                <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
+            </ul>
+          </div>
         </nav>
       </div>
     <div class="container">
@@ -38,11 +41,11 @@
         <h3>Elérhetőségek</h3>
     </div>
     <div class="row mx-auto my-auto paddolj bg-secondary w-50">
-        <div class="col-4"><p><a href="" onclick="func()" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
-        <div class="col-4"><p><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></p></div>
-        <div class="col-4"><p><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+        <div class="col-md-4 col-sm-12"><p><a href="" id="dc"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+        <div class="col-md-4 col-sm-12"><p><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+        <div class="col-md-4 col-sm-12"><p><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></p></div>
     </div>    
-    <div class="container fixed-bottom">
+    <div class="container-fluid">
         <footer>
             <p>&copy; Zick Balázs 2021</p>
         </footer>
