--- a/index.html
+++ b/index.html
@@ -4,43 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>Bemutatkozó oldal</title>
 </head>
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">A csapat</a>
-          <ul class="navbar-nav">
-              <li class="nav-item"><a href="#" class="nav-link">Index <span>(jelenlegi)</span></a></li>
-              <li class="nav-item active"><a href="balazs.html" class="nav-link">Zick Balázs</a></li>
-              <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
-              <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
-          </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tar"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="tar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="#" class="nav-link">Index <span>(jelenlegi)</span></a></li>
+                <li class="nav-item active"><a href="balazs.html" class="nav-link">Zick Balázs</a></li>
+                <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
+                <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
+            </ul>
+          </div>
         </nav>
       </div>
     <div class="container">
         <h1 class="mx-auto">A csapat</h1>
-        <div class="row mx-auto">
-            <div class="col-md-4 bg-light border border-dark" id="kepfent">
-                <a href="https://github.com/zickbalazs"><img src="img/index/zick.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
-                <h3>Zick Balázs</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-                <p><a href="balazs.html" class="center">Weboldal</a></p>
-
+        <div class="row mx-auto gap-5 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-12 bg-light border border-dark rounded" id="kepfent">
+                <div class="col-md-12">
+                    <a href="https://github.com/zickbalazs"><img src="img/index/zick.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
+                    <h3>Zick Balázs</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
+                    <p><a href="balazs.html" class="center">Weboldal</a></p>
+                </div>
             </div>
-            <div class="col-md-4 bg-light border border-dark" id="kepfent">
-                <a href="https://github.com/DavidKocsis0204"><img src="img/index/kocsis.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
-                <h3>Kocsis Dávid</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-                <p><a href="david.html" class="center">Weboldal</a></p>
+            <div class="col-md-3 col-sm-12 bg-light border border-dark rounded" id="kepfent">
+                <div class="col-md-12">
+                    <a href="https://github.com/DavidKocsis0204"><img src="img/index/kocsis.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
+                    <h3>Kocsis Dávid</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
+                    <p><a href="david.html" class="center">Weboldal</a></p>
+                </div>
             </div>
-            <div class="col-md-4 bg-light border border-dark" id="kepfent">
-                <a href="https://github.com/GinalZsolt"><img src="img/index/zsolt.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
-                <h3>Ginál Zsolt</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-                <p><a href="zsolt.html" class="center">Weboldal</a></p>
+            <div class="col-md-3 col-sm-12 bg-light border border-dark rounded" id="kepfent">
+                <div class="col-md-12">
+                    <a href="https://github.com/GinalZsolt"><img src="img/index/zsolt.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
+                    <h3>Ginál Zsolt</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
+                    <p><a href="zsolt.html" class="center">Weboldal</a></p>
+                </div>
             </div>
         </div>
     </div>    
